Final formatting and commenting

--- a/risk_return_analysis.ipynb
+++ b/risk_return_analysis.ipynb
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1029,18 +1029,18 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "# Calculate the annual average return data for the for fund portfolios and the S&P 500\n",
     "# Use 252 as the number of trading days in the year\n",
-    "# Review the annual average returns sorted from lowest to highest\n",
-    "# YOUR CODE HERE\n",
-    "\n",
     "average_annual_return_nav = nav_daily_returns.mean() * 252\n",
+    "\n",
+    "# Review the annual average returns sorted from lowest to highest\n",
     "average_annual_return_nav.sort_values()\n"
    ]
   },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1067,16 +1067,16 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the annualized Sharpe Ratios for each of the 4 portfolios and the S&P 500.\n",
-    "# Review the Sharpe ratios sorted lowest to highest\n",
-    "# YOUR CODE HERE\n",
     "sharpe_ratios_nav = (average_annual_return_nav / annualized_std_devs)\n",
+    "\n",
+    "# Review the Sharpe ratios sorted lowest to highest\n",
     "sharpe_ratios_nav.sort_values()\n"
    ]
   },
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1241,8 +1241,9 @@
    ],
    "source": [
     "# Calculate the covariance using a 60-day rolling window \n",
-    "# Review the last five rows of the covariance data\n",
     "bh_rolling_60_covariance = nav_daily_returns[\"BERKSHIRE HATHAWAY INC\"].rolling(60).cov(nav_daily_returns[\"S&P 500\"])\n",
+    "\n",
+    "# Review the last five rows of the covariance data\n",
     "print(\"Rolling covariance between Berkshire Hathaway INC and S&P 500 with 60 day window\")\n",
     "display(bh_rolling_60_covariance.tail())\n"
    ]
@@ -1256,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1271,17 +1272,19 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Calculate the beta based on the 60-day rolling covariance compared to the market (S&P 500)\n",
-    "# Review the last five rows of the beta information\n",
+    "#Calculating the 60-day rolling variance for the S&P 500\n",
     "sp500_rolling_60_variance = nav_daily_returns[\"S&P 500\"].rolling(60).var()\n",
     "\n",
+    "# Calculate the beta based on the 60-day rolling covariance compared to the market (S&P 500)\n",
     "bh_rolling_60_beta = bh_rolling_60_covariance/(sp500_rolling_60_variance)\n",
+    "\n",
+    "# Review the last five rows of the beta information\n",
     "bh_rolling_60_beta.tail()"
    ]
   },
@@ -1363,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1391,8 +1394,9 @@
    ],
    "source": [
     "# Calculate the covariance using a 60-day rolling window \n",
-    "# Review the last five rows of the covariance data\n",
     "tgm_rolling_60_covariance = nav_daily_returns[\"TIGER GLOBAL MANAGEMENT LLC\"].rolling(60).cov(nav_daily_returns[\"S&P 500\"])\n",
+    "\n",
+    "# Review the last five rows of the covariance data\n",
     "print(\"Rolling covariance between Tiger Global Mangement LLC and S&P 500 with 60 day window\")\n",
     "display(tgm_rolling_60_covariance.tail())\n"
    ]
@@ -1406,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1421,17 +1425,16 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the beta based on the 60-day rolling covariance compared to the market (S&P 500)\n",
-    "# Review the last five rows of the beta information\n",
-    "# YOUR CODE HERE\n",
-    "\n",
     "tgm_rolling_60_beta = tgm_rolling_60_covariance/(sp500_rolling_60_variance)\n",
+    "\n",
+    "# Review the last five rows of the beta information\n",
     "tgm_rolling_60_beta.tail()"
    ]
   },
